--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <img src="https://files.readme.io/10d1566-shopify-gray.svg" alt="Shopify">
                 </div>
                 <div class="grow1">
-                    <h1>Wordpress/WooCommerce</h1>
+                    <h1>WooCommerce</h1>
                     <img src="https://files.readme.io/ce76fc1-woocommerce-gray.svg" alt="WooCommerce" id="WP">
                 </div>
                 <div class="grow1">
