--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
                 <img src="https://conekta.com/static/assets/Home/conekta-logo-white-desktop.svg" id='logo'>
             </li>
             <li><a href='index.html'>Inicio</a></li>
+            <li><a href='https://conekta.com/about-us'>Nosotros</a></li>
+            <li><a href='https://developers.conekta.com/page/pruebas'>Tarjetas de prueba</a></li>
+            <li><a href='https://developers.conekta.com/page/webhooks'>Webhooks</a></li>
+            <li><a href='https://developers.conekta.com/discuss'>Foro</a></li>
+            <li><a href='https://help.conekta.com/hc/es-419/requests/new'>Contáctanos</a></li>
         </ul>
     </nav>
     <section class="layout">
@@ -57,19 +62,11 @@
         <div class="rightSide"></div>
         <div class="footer">
             <nav id='foot'>
-                <input type='checkbox' id='responsive-menu' onclick='updatemenu()'><label></label>
                 <ul>
-                    <li>
-                        <img src="https://conekta.com/static/assets/Home/conekta-logo-white-desktop.svg" id='logo'>
-                    </li>
-                    <li><a href='https://conekta.com/about-us'>Nosotros</a></li>
-                    <li><a href='https://developers.conekta.com/page/pruebas'>Tarjetas de prueba</a></li>
-                    <li><a href='https://developers.conekta.com/page/webhooks'>WebHooks</a></li>
-                    <li><a href='https://developers.conekta.com/discuss'>Foro</a></li>
-                    <li><a href='https://help.conekta.com/hc/es-419/requests/new'>Contáctanos</a></li>
                 </ul>
             </nav>
         </div>
     </section>
 </body>
+
 </html>
