--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <h1>Magento</h1>
                     <img src="https://files.readme.io/dc16368-magento-gray.svg" alt="Magento">
                 </div>
-                <div class="grow1">
+                <div class="grow1" onclick="showPSVideos()">
                     <h1>PrestaShop</h1>
                     <img src="https://assets.conekta.com/cpanel/statics/assets/brands/logos/prestashop-48px-greyscale.svg"
                         alt="PrestaShop">
