--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             </section>
         </div>
         <div class="rightSide"></div>
-        <div class="footer">
+        <div class="footer" id="footernav">
             <nav id='foot'>
                 <ul>
                     <li>
